--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
 	<meta charset="UTF-8" />
 	<title>Document</title>
-	<script src="../node_modules/jquery/dist/jquery.js" type="text/javascript" charset="utf-8"></script>
-	<link rel="../stylesheet" type="text/css" href="/node_modules/bootstrap/dist/css/bootstrap.css"/>
-	<link rel="../stylesheet" type="text/css" href="/node_modules/bootstrap/dist/css/bootstrap-theme.css"/>
-	<script src="../node_modules/bootstrap/dist/js/bootstrap.js" type="text/javascript" charset="utf-8"></script>
+	<script src="node_modules/jquery/dist/jquery.js" type="text/javascript" charset="utf-8"></script>
+	<link rel="stylesheet" type="text/css" href="node_modules/bootstrap/dist/css/bootstrap.css"/>
+	<link rel="stylesheet" type="text/css" href="node_modules/bootstrap/dist/css/bootstrap-theme.css"/>
+	<script src="node_modules/bootstrap/dist/js/bootstrap.js" type="text/javascript" charset="utf-8"></script>
 </head>
 <body>
 	<div>
